# krabby_ai

./: Cargo.toml  README.md
src/: client.rs  config.rs  lib.rs  main.rs  utils.rs
src/models/: message.rs
