[package]
name = "krabby"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "krabby"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
termimad = "0.31.2"
colored = "3.0.0"
hostname = "0.4.0"
whoami = "1.5.2"
